sumo/tests/traci/VariableRetrieval/Edge/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 170 89 xxx
simstep 6 1
